--- a/views/admin/addCoupon.ejs
+++ b/views/admin/addCoupon.ejs
@@ -1,7 +1,7 @@
 <%- include('../adminLayouts/header.ejs') %>
     <%- include('../adminLayouts/navbar.ejs') %>
 
-        <div class="container mt-5">
+        <div class="content-main">
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="card">
