--- a/views/admin/addOffer.ejs
+++ b/views/admin/addOffer.ejs
@@ -1,7 +1,7 @@
 <%- include('../adminLayouts/header.ejs') %>
     <%- include('../adminLayouts/navbar.ejs') %>
 
-        <div class="container mt-5">
+        <div class="content-main">
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="card">
@@ -34,8 +34,8 @@
 
                                 <button type="submit" class="btn btn-primary"
                                     style="display: block; margin: 0 auto;">Add Offer</button>
-                                    <br>
-                                        <div class="error-message" id="form-errors" style="text-align: center;"></div>
+                                <br>
+                                <div class="error-message" id="form-errors" style="text-align: center;"></div>
 
                             </form>
                         </div>
@@ -158,7 +158,7 @@
                             setTimeout(() => {
                                 location.href = data.url;
                             }, 2000);
-                        } 
+                        }
                     })
                     .catch(err => {
                         if (err.response && err.response.data && !err.response.data.success) {
